This version can be used to test throughput and latency of star and random topology